
[workspace]
members = ["game"]
resolver = "2"

[workspace.dependencies]
bevy = { version = "0.12", default-features = false, features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline", 
    "bevy_sprite",
    "bevy_asset",
    "bevy_scene",
    "bevy_text",
    "bevy_ui",
    "bevy_pbr",
    "bevy_gltf",
    "x11",
    "png",
    "vorbis",
    "default_font",
] }

# Optimize the engine in debug builds, but leave project's code non-optimized.
# By using this technique, you can still debug you code, but engine will be fully
# optimized and debug builds won't be terribly slow. With this option, you can
# compile your game in debug mode, which is much faster (at least x3), than release.
[profile.dev.package."*"]
opt-level = 3

# Enable max optimizations for dependencies, but not for our code
[profile.release]
opt-level = 3
lto = "thin"
