
[package]
name = "editor"
version = "0.0.1-init"
edition = "2021"

[dependencies]
fyrox = { workspace = true }
fyroxed_base = { workspace = true }
void_survivor = { path = "../game", optional = true }

[features]
default = ["void_survivor", "fyroxed_base/default"]
dylib = ["fyroxed_base/dylib_engine"]
