
[package]
name = "game-dylib"
version = "0.0.1-init"
edition = "2021"kage]
name = "game_dylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
void_survivor = { path = "../game", default-features = false }

[features]
default = ["void_survivor/default"]
dylib-engine = ["void_survivor/dylib-engine"]
